--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@apollo/client": "^3.3.21",
+    "apollo-angular": "^2.6.0",
+    "bootstrap": "^3.4.1",
+    "graphql": "^15.5.1",
     "rxjs": "~6.5.5",
+    "subscriptions-transport-ws": "^0.9.19",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
